--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5CountryWaltz.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5CountryWaltz.html
@@ -22,7 +22,7 @@
             <h2>Country Waltz</h2>
         </section>
         <section id="steezy">
-            <h2>Chord 1 and chord 4</h2>
+            <h2>Chords 1 and 4 or chords 1 and 5</h2>
         </section>
 
         <div class="lesson-block">
