--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Index.html
@@ -45,9 +45,9 @@
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4CounrtyWaltz.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4CampfireGuitars.html">
                     <img src="Afbeeldingen/M5.webp" alt="Country Waltz">
-                    <span>Country Waltz</span>
+                    <span>Campfire Guitars</span>
                 </a>
             </section>
             <section>
