--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5Index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akkoorden herkennen op gehoor Voorbereiding 1</title>
-    <link rel="stylesheet" href="https://thomastooten.github.io/JPRSite/Tegel.css">
+    <link rel="stylesheet" href="https://thomastooten.github.io/JPRSite/M4Tegel.css">
 </head>
 <body>
     <header>
@@ -17,7 +17,7 @@
     </header>
     <main>
         <section id="steezy">
-            <h2>Akkorden herkennen op gehoor Voorbereiding 2</h2>
+            <h2>Akkoorden herkennen op gehoor Voorbereiding 2</h2>
         </section>
 
         <div class="lesson-block">
