--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5Index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5Index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akkoorden herkennen op gehoor Voorbereiding 1</title>
+    <title>Melody Path</title>
     <link rel="stylesheet" href="https://thomastooten.github.io/JPRSite/M4Tegel.css">
 </head>
 <body>
     <header>
-        <h1>Feel the Chords</h1>
+        <h1>Melody Paths</h1>
         <nav>
             <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
             <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
@@ -16,23 +16,59 @@
         </nav>
     </header>
     <main>
-        <section id="steezy">
-            <h2>Akkoorden herkennen op gehoor Voorbereiding 2</h2>
+        <section>
+            <h2>Akkoorden herkennen: 1 en 4</h2>
         </section>
 
-        <div class="lesson-block">
-            <p>Stumming Guitars</p>
-            <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Song analysis - Walk on the Wild Side.mp4"></video>
-        </div>
-        <div class="lesson-block">
-            <p>Jazz</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 03 - Feel the Chords 01 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+        <h2>Les 1</h2>
+        <div id="media-container">
+            <div class="media-item">
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 1 deel 1comp.mp4"></video>
+                <span>Deel 1</span>
+            </div>
+            <div class="media-item">
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 1 Deel 2comp.mp4"></video>
+                <span>Deel 2</span>
+            </div>
+            <div class="media-item">
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 1 Deel 3comp.mp4"></video>
+                <span>Deel 3</span>
+            </div>
         </div>
 
-        <div class="lesson-block">
-            <p>Song analysis: Walk on the Wild Side</p>
-            <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Song analysis - Walk on the Wild Side.mp4"></video>
+        <h2>Modules</h2>
+        <div id="links-container">
+            <section>
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4PianoBalled.html">
+                    <img src="Afbeeldingen/M4.webp" alt="Piano Ballad">
+                    <span>Piano Ballad</span>
+                </a>
+            </section>
+            <section>
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4CampfireGuitars.html">
+                    <img src="Afbeeldingen/M5.webp" alt="Country Waltz">
+                    <span>Campfire Guitars</span>
+                </a>
+            </section>
+            <section>
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Bonfire Folky Swing.html">
+                    <img src="Afbeeldingen/M6.webp" alt="Bonfire Folky Swing">
+                    <span>Bonfire Folky Swing</span>
+                </a>
+            </section>
         </div>
+
+        <h2>Song Analyse</h2>
+        <div id="media-container">
+            <div class="media-item">
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
+                <span>Walking on the Wild Side</span>
+            </div>
+        </div>
+
+        <section>
+            <p>Improvise For Real biedt meespeeltracks aan in alle toonaarden en verschillende muziekgenres. <br> Je kan ook zelf backtracks maken in de app 'iReal Pro' en Hookpad (www.hooktheory.com)</p>
+        </section>
     </main>
 </body>
 </html>
