--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <Header>
-        <h1>Melody Paths</h1>
+        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html">
+
+            <h1>FEEL THE CHORDS</h1>
+        </a>
         <nav>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
@@ -17,7 +20,7 @@
     </Header>
     <main>
         <section>
-            <h2>Sing The numbers</h2>
+            <h2>FEEL THE CHORDS</h2>
         </section>
         <div id="links-container">
             <section>
