--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5Index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5Index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Melody Paths</h1>
+        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html">
+
+            <h1>Feel the Chords</h1>
+        </a>
         <nav>
             <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
             <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
@@ -17,7 +20,7 @@
     </header>
     <main>
         <section>
-            <h2>Akkoorden herkennen: 1 en 4</h2>
+            <h2>Akkoorden herkennen: 1 en 5</h2>
         </section>
 
         <h2>Les 1</h2>
@@ -40,20 +43,26 @@
         <div id="links-container">
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4PianoBalled.html">
-                    <img src="Afbeeldingen/M4.webp" alt="Piano Ballad">
-                    <span>Piano Ballad</span>
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M5/image1.png" alt="Counrty Waltz">
+                    <span>Counrty Waltz</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4CampfireGuitars.html">
-                    <img src="Afbeeldingen/M5.webp" alt="Country Waltz">
-                    <span>Campfire Guitars</span>
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M5/2.png" alt="Dreamy">
+                    <span>Dreamy</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Bonfire Folky Swing.html">
-                    <img src="Afbeeldingen/M6.webp" alt="Bonfire Folky Swing">
-                    <span>Bonfire Folky Swing</span>
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M5/3.png" alt="Jazz Guitar Trio">
+                    <span>Jazz Guitar Trio</span>
+                </a>
+            </section>
+            <section>
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Bonfire Folky Swing.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M5/4.png" alt="Strumming Guitars">
+                    <span>Strumming Guitars</span>
                 </a>
             </section>
         </div>
@@ -61,8 +70,8 @@
         <h2>Song Analyse</h2>
         <div id="media-container">
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
-                <span>Walking on the Wild Side</span>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Song analysis - Dance the Night Away.mp4"></video>
+                <span>Dance the Night Away</span>
             </div>
         </div>
 
