--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Melody Paths</h1>
+        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html">
+
+            <h1>Feel the Chords</h1>
+        </a>
         <nav>
             <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
             <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
