--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5Index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5Index.html
@@ -26,16 +26,20 @@
         <h2>Les 1</h2>
         <div id="media-container">
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Lesson 1 deel 1comp.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Lesson 2 deel 1comp.mp4"></video>
                 <span>Deel 1</span>
             </div>
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 1 Deel 2comp.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Lesson 2 Deel 2comp.mp4"></video>
                 <span>Deel 2</span>
             </div>
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 1 Deel 3comp.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Lesson 2 Deel 3comp.mp4"></video>
                 <span>Deel 3</span>
+            </div>
+            <div class="media-item">
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Lesson 2 Deel 4comp.mp4"></video>
+                <span>Deel 4</span>
             </div>
         </div>
 
