--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5Index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5Index.html
@@ -23,10 +23,10 @@
             <h2>Akkoorden herkennen: 1 en 5</h2>
         </section>
 
-        <h2>Les 1</h2>
+        <h2>Les 2</h2>
         <div id="media-container">
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Lesson 2 deel 1comp.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Lesson 2 Deel 1comp.mp4"></video>
                 <span>Deel 1</span>
             </div>
             <div class="media-item">
