--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6Index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6Index.html
@@ -19,23 +19,16 @@
     </header>
     <main>
         <section>
-            <h2>Akkoorden herkennen: 1 en 5</h2>
+            <h2>Akkoorden herkennen: 1,4 en 5</h2>
         </section>
 
-        <h2>Les 1</h2>
+        <h2>Les 3</h2>
         <div id="media-container">
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 1 deel 1comp.mp4"></video>
-                <span>Deel 1</span>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Lesson 6 - Flowing with chords 1, 4 and 5Comp.mp4"></video>
+                <span>Following with chords</span>
             </div>
-            <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 1 Deel 2comp.mp4"></video>
-                <span>Deel 2</span>
-            </div>
-            <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 1 Deel 3comp.mp4"></video>
-                <span>Deel 3</span>
-            </div>
+    
         </div>
 
         <h2>Modules</h2>
@@ -72,13 +65,7 @@
             </section>
         </div>
 
-        <h2>Song Analyse</h2>
-        <div id="media-container">
-            <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Song analysis - Dance the Night Away.mp4"></video>
-                <span>Dance the Night Away</span>
-            </div>
-        </div>
+
 
         <section>
             <p>Improvise For Real biedt meespeeltracks aan in alle toonaarden en verschillende muziekgenres. <br> Je kan ook zelf backtracks maken in de app 'iReal Pro' en Hookpad (www.hooktheory.com)</p>
