--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M7ElectricRock.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M7ElectricRock.html
@@ -18,20 +18,24 @@
         </nav>
     </header>
     <main>
+        <img scr="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/ElectricRock.png"/>
+        <img scr="Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/ElectricRock.png">
+        <img scr="/Users/thomastooten/Documents/GitHub/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/ElectricRock.png">
+
         <section id='steezy'>
-            <h2>Pop</h2>
+            <h2>Electric Rock</h2>
         </section>
         <section id="steezy">
-            <h2>1 - 4 - 5 - 1</h2>
+            <h2>6-, 5D, 4, 5D</h2>
         </section>
         <div class="lesson-block">
-            <img scr="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/ElectricRock.png"/>
+            <p>key of Ab</p>
+            <img scr="/Users/thomastooten/Documents/GitHub/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/ElectricRock.png">
+
         </div>
 
-        <div class="lesson-block">
-            <p>key of A</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 6-, 5D, 4, 5D - Electric Rock (key of A).mp3"></audio>
-        </div>
+
+
         <div class="lesson-block">
             <p>key of Ab</p>
             <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 6-, 5D, 4, 5D - Electric Rock (key of Ab).mp3"></audio>
