--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M7ElectricRock.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M7ElectricRock.html
@@ -29,12 +29,14 @@
             <h2>6-, 5D, 4, 5D</h2>
         </section>
         <div class="lesson-block">
-            <p>key of Ab</p>
-            <img scr="/Users/thomastooten/Documents/GitHub/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/ElectricRock.png">
-
+            
+            <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/ElectricRock.png" alt="Electric Rock">        
         </div>
-
-
+        <div class="lesson-block">
+            <p>key of A</p>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 6-, 5D, 4, 5D - Electric Rock (key of A).mp3"></audio>
+        </div>
+ 
 
         <div class="lesson-block">
             <p>key of Ab</p>
