--- a/Main index/eartraining/Sing the numbers/Tonal map/index.html
+++ b/Main index/eartraining/Sing the numbers/Tonal map/index.html
@@ -6,138 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tonal Map Index</title>
 
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-        
-        body {
-            background-color: #ecf0f1;
-            font-family: helvetica, arial, sans-serif;
-            font-size: 18px;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: center;
-            text-align: center;
-            margin: 0;
-        }
-
-        header {
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-
-        header h1 {
-            font-size: 48px;
-            color: #3498db;
-            text-transform: uppercase;
-            margin-bottom: 20px;
-        }
-
-        nav {
-            margin-bottom: 40px;
-        }
-
-        nav a {
-            margin: 0 20px;
-            color: #3498db;
-            text-decoration: none;
-            font-size: 18px;
-            font-weight: 600;
-            position: relative;
-        }
-
-        nav a::after {
-            content: '';
-            display: block;
-            width: 0;
-            height: 2px;
-            background: #3498db;
-            transition: width 0.3s ease;
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-        }
-
-        nav a:hover::after {
-            width: 100%;
-        }
-
-        main {
-            max-width: 1200px;
-            width: 100%;
-            padding: 20px;
-        }
-
-        section h2 {
-            font-size: 36px;
-            margin-bottom: 30px;
-            font-weight: bold;
-            color: #2c3e50;
-        }
-
-        #links-container, .module-links {
-            display: flex;
-            justify-content: center;
-            gap: 40px;
-            margin-bottom: 40px;
-            flex-wrap: wrap;
-        }
-
-        .link {
-            text-decoration: none;
-            color: #2c3e50;
-            width: 180px;
-            text-align: center;
-        }
-
-        .link img {
-            display: block;
-            margin: 0 auto;
-            border-radius: 12px;
-            height: 220px;
-            width: 180px;
-            object-fit: cover;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .link:hover img {
-            transform: scale(1.05); /* Zoom effect bij hover */
-        }
-
-        .link span {
-            display: block;
-            margin-top: 10px;
-            font-size: 20px;
-            color: #7f8c8d;
-        }
-
-        @media (max-width: 768px) {
-            .link {
-                width: 150px;
-            }
-
-            .link img {
-                height: 180px;
-                width: 150px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .link {
-                width: 120px;
-            }
-
-            .link img {
-                height: 150px;
-                width: 120px;
-            }
-        }
-    </style>
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/Tegel.css">
 </head>
 <body>
     <header>
