--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -36,7 +36,7 @@
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Sing the numbers/Melody Paths/index.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Sing the numbers/02121Melody Paths/index.html">
                     <img src="Afbeeldingen/Melody Path.png" alt="Melody Path" height="200" width="200">
                     <span>Melody Paths</span>
                 </a>
