--- a/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/Jazz.html
+++ b/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/Jazz.html
@@ -30,51 +30,51 @@
 
         <div class="lesson-block">
             <p>key of A (note = A) </p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JJPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of A (note 1 = A).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of A (note 1 = A).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Ab (note = Ab) </p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JJPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of Ab (note 1 = Ab).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of Ab (note 1 = Ab).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of B (note = B) </p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JJPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of B (note 1 = B).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of B (note 1 = B).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Bb (note = Bb) </p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JJPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of Bb (note 1 = Bb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of Bb (note 1 = Bb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of C (note = C) </p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JJPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of C (note 1 = C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of C (note 1 = C).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of D (note = D) </p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JJPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of D (note 1 = D).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of D (note 1 = D).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Db (note = Db) </p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JJPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of Db (note 1 = Db).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of Db (note 1 = Db).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of E (note = E) </p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JJPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of E (note 1 = E).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of E (note 1 = E).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Eb (note = Eb) </p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JJPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of Eb (note 1 = Eb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of Eb (note 1 = Eb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of F (note = F) </p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JJPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of F (note 1 = F).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of F (note 1 = F).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of G (note = G) </p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JJPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of G (note 1 = G).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of G (note 1 = G).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Gb (note = Gb) </p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JJPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of Gb (note 1 = Gb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/audio/1st harmonic env, jazz, key of Gb (note 1 = Gb).mp3"></audio>
         </div>
 
 
