--- a/Main index/eartraining/Jam Tracks/Seven Worlds/2nd harmonic env/jazz.html
+++ b/Main index/eartraining/Jam Tracks/Seven Worlds/2nd harmonic env/jazz.html
@@ -12,7 +12,7 @@
     <header>
         <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html">
 
-            <h2>Feel the Chords</h2>
+            <h1>Jam Tracks</h1>
         </a>
         <nav>
             <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
