--- a/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/index.html
+++ b/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ear Training</title>
     <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/Tegel met Tekst.css">
-
-
 </head>
 <body>
     <header>
@@ -20,19 +18,19 @@
 
     <main>
         <section>
-            <h2>Sing The Numbers</h2>
+            <h2> <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining//Jam Tracks/Seven Worlds/index.html">Seven Worlds</a></h2>
         </section>
         <div id="links-container">
-            <a class="link" href="M1.html">
-                <img src="Afbeeldingen/M1.webp" alt="Module 1">
+            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/Jazz.html">
+                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Jazz.png" alt="Jazz">
                 <span>Module 1</span>
             </a>
-            <a class="link" href="M2.html">
-                <img src="Afbeeldingen/M2.webp" alt="Module 2">
+            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/meditative.html">
+                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Meditative.png" alt="Meditative">
                 <span>Module 2</span>
             </a>
-            <a class="link" href="M3.html">
-                <img src="Afbeeldingen/M3.webp" alt="Module 3">
+            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/modern.html">
+                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Modern.png" alt="Modern">
                 <span>Module 3</span>
             </a>
         </div>
